# nkama-fact-benchmark

./: .gitignore  CHANGELOG.md  LAUNCH_CHECKLIST.md  LICENSE  MANIFEST.in  README.md  README_PYPI.md  RECOMMENDED_RUN.md  SECURITY.md  SHOW_HN_DRAFT.md  SPONSORS_SETUP.md  pyproject.toml
.github/: FUNDING.yml
.github/workflows/: publish.yml
codex_skills/nkama-for-codex/: SKILL.md
codex_skills/nkama-for-codex/agents/: openai.yaml
docs/: BRIDGE_FLOW.md  MANIFEST_QUALITY.md  NKAMA_FOR_CODEX.md  STANDARD_TASKS.md
evidence/: README.md
evidence/01_fable5_browser_trap/: ANSWER.md  MODEL_RUN_REPORT.json  evidence_manifest.json  run_contract.json  verification_report.json
evidence/02_emberfall_workspace/: ANSWER.md  evidence_manifest.json  run_contract.json  verification_report.json
evidence/03_emberfall_downloads/: ANSWER.md  evidence_manifest.json  run_contract.json  verification_report.json
evidence/04_crossmodel_certificate/: ANSWER.md  MODEL_RUN_REPORT.json  evidence_manifest.json  run_contract.json  verification_report.json
evidence/05_fable5_roadmap/: ANSWER.md  MODEL_RUN_REPORT.json  evidence_manifest.json  run_contract.json  verification_report.json
evidence/06_reverse_bridge/: ANSWER.md  CODEX_VERIFICATION.md  evidence_manifest.json  manifest_stats.py  run_contract.json  test_manifest_stats.py  verification_report.json
examples/portable_demo/: README.md  evidence_manifest.json  test_wordcount.py  wordcount.py
nkama_fact_benchmark/: __init__.py  agent.py  bridge.py  capability.py  evidence_layer.py  fact_benchmark.py  inspector.py  pilot.py  prompt_filter.py  security.py  truth_filter.py  workflow.py
tests/: test_no_absolute_paths.py
(+2 files in other folders)
